# My-project

./: .gitignore  README.md  presskeys.au3
.github/: copilot-instructions.md
.github/instructions/: instructions.instructions.md
.github/workflows/: agent-cd.yml  agent-ci.yml  apk-manifest-verify.yml  ci.yml  deploy.yml
05-integrations/: README.md
07-ops/: OVERVIEW.md  README.md
08-security/: README.md
09-docs/: README.md
archives/: README.md
certs/: dev-cert-localhost.cer  dev-cert-localhost.pfx
docs/: history.md  inventory.md  stage-0-checklist.md  structure-proposals.md  windows-app-analysis.md
functions/: payments-webhook.ts
infra/: README.md
keys/: private_ed25519.pem  public_ed25519.pem
libs/cpp/: CMakeLists.txt  README.md
libs/cpp/include/selfservice/obd/: Core.hpp
libs/cpp/src/: Core.cpp
libs/cpp/tests/: README.md
libs/python/: README.md  pyproject.toml
libs/python/requirements/: dev.txt
libs/python/tests/: test_baseline.py
logs/: security-infra-meeting-20251015.jsonl
node-legacy/: README.md
outbox/: ai-output.txt  copilot-micro-prompts.txt  copilot-next-prompt.txt  security-backlog-tasks-azure.csv  security-backlog-tasks.json  stage1-pass-thru-backlog-azure.csv  stage1-pass-thru-backlog.json  update-security-infra-meeting.ics
public/: sw.js
src/: App.tsx  index.css  main.tsx
templates/: dtc-manifest.json
tmp-emulator-test/: ELM327Emulator.js  EmulatorTests.test.js
блок 4/: AlphaRomeoFifteen.Designer.cs  AlphaRomeoFifteen.cs  AlphaRomeoFifteen.resx  Passthru.csproj  Program.cs  packages.config
(+1298 files in other folders)
